<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_gradient"
    tools:context=".CurrentWeather">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currently_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/current_text" />

        <TextView
            android:id="@+id/current_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="40sp"
            android:fontFamily="monospace"
            android:textColor="#ffffff"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/empty_location" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/current_weather_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/feels_like_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="30sp"
                android:fontFamily="monospace"
                android:textColor="#ffffff"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/feels_like_text" />

            <TextView
                android:id="@+id/feels_like_current_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="40sp"
                android:fontFamily="monospace"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/empty_degree" />

            <TextView
                android:id="@+id/actually_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="monospace"
                android:layout_weight=".5"
                android:textColor="#ffffff"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/actually_text" />

            <TextView
                android:id="@+id/actually_current_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25sp"
                android:fontFamily="monospace"
                android:layout_weight=".5"
                android:textColor="#ffffff"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/empty_degree" />

            <TextView
                android:id="@+id/current_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25sp"
                android:fontFamily="monospace"
                android:layout_weight="1.5"
                android:textColor="#ffffff"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/current_summary_stand_in" />

            <TextView
                android:id="@+id/daily_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25sp"
                android:fontFamily="monospace"
                android:layout_weight="1.5"
                android:textColor="#ffffff"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/daily_summary_stand_in" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>